--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a bot for animal crossing new horizons discord servers",
   "main": "index.js",
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "mocha": "^7.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
