test fix for github

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,10 +20,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: secrethub/actions/env-export@v0.1.0
+      env:
+        TOKEN: secrethub://mattdonatelli/kazubot/local/token
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run lint
-    - run: npm run test
+    - run: npm run testGithub
