--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "testLocal": "secrethub run --var env=local mocha",
     "testGithub": "echo $TOKEN | mocha",
     "local": "secrethub run --var env=local pm2 start src/js/bot.js --time",
-    "cloud": "secrethub run --var env=cloud pm2 start src/js/bot.js --time"
+    "cloud": "secrethub run --var env=cloud pm2 start src/js/bot.js --time",
+    "start": "node src/js/bot.js"
   },
   "repository": {
     "type": "git",
