--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,8 +12,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm run lint
       - name: Build Docker image
         run: docker build -t mattdonatelli/kazubot:${GITHUB_SHA:0:7} .
       - uses: secrethub/actions/env-export@v0.1.0
