Default env to prod unless specified otherwise as docker build arg

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -5,7 +5,7 @@ services:
     image: kazubot
     build: .
     environment:
-      ENV: local
+      ENV: lab
     ports:
       - 3000
       - 9229:9229
