--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "/src/js/bot.js",
   "dependencies": {
     "discord.js": "^12.2.0",
-    "mocha": "^7.2.0"
+    "mocha": "^7.2.0",
+    "pm2": "^4.4.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
