--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint": "^7.1.0"
   },
   "scripts": {
-    "lint": "eslint src/js"
+    "lint": "eslint src/js",
+    "bot": "pm2-runtime src/js/bot.js"
   },
   "repository": {
     "type": "git",
