--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,7 +38,10 @@ jobs:
         docker run -d -e SECRETHUB_TOKEN_PATH=mattdonatelli/kazubot/lab/token -e SECRETHUB_CREDENTIAL=$(cat $HOME/.secrethub/credential) -- mattdonatelli/kazubot 
         secrethub run -e TOKEN=$SECRETHUB_TOKEN_PATH -- mocha
     - uses: secrethub/actions/env-export@v0.1.0
-      env: 
+      env:
+        SECRETHUB_CREDENTIAL: ${{ secrets.SECRETHUB_CREDENTIAL }}
+        DOCKER_USERNAME: secrethub://mattdonatelli/kazubot/docker/username
+        DOCKER_PASSWORD: secrethub://mattdonatelli/kazubot/docker/password
         SECRETHUB_TOKEN_PATH: secrethub://mattdonatelli/kazubot/lab/token
     - name: Publish Docker image
       run: |
