--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "lint": "eslint src/js",
+    "test": "mocha",
     "bot": "pm2-runtime src/js/bot.js"
   },
   "repository": {
