--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,8 +35,9 @@ jobs:
         DOCKER_USERNAME: secrethub://mattdonatelli/kazubot/docker/username
         DOCKER_PASSWORD: secrethub://mattdonatelli/kazubot/docker/password
         SECRETHUB_TOKEN_PATH: secrethub://mattdonatelli/kazubot/lab/token
+        TEST_TOKEN_PATH: mattdonatelli/kazubot/lab/token
     - name: Run Docker and Functional Tests
-      run: docker run -e SCRIPT=test -e SECRETHUB_TOKEN_PATH=secrethub://mattdonatelli/kazubot/lab/token -- mattdonatelli/kazubot:${GITHUB_SHA:0:7}
+      run: docker run -e SCRIPT=test -e SECRETHUB_TOKEN_PATH=$TEST_TOKEN_PATH -- mattdonatelli/kazubot:${GITHUB_SHA:0:7}
     - name: Publish Docker image
       run: |
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
