--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,13 +36,7 @@ jobs:
         DOCKER_PASSWORD: secrethub://mattdonatelli/kazubot/docker/password
         SECRETHUB_TOKEN_PATH: secrethub://mattdonatelli/kazubot/lab/token
     - name: Run Docker and Functional Tests
-      run: docker run -e SCRIPT=test -- mattdonatelli/kazubot:${GITHUB_SHA:0:7}
-    - uses: secrethub/actions/env-export@v0.1.0
-      env:
-        SECRETHUB_CREDENTIAL: ${{ secrets.SECRETHUB_CREDENTIAL }}
-        DOCKER_USERNAME: secrethub://mattdonatelli/kazubot/docker/username
-        DOCKER_PASSWORD: secrethub://mattdonatelli/kazubot/docker/password
-        SECRETHUB_TOKEN_PATH: secrethub://mattdonatelli/kazubot/lab/token
+      run: docker run -e SCRIPT=bot -- mattdonatelli/kazubot:${GITHUB_SHA:0:7}
     - name: Publish Docker image
       run: |
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
