--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "mocha": "^7.2.0",
-    "pm2": "^4.4.0"
+    "pm2": "^4.4.0",
+    "rewire": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
