--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,7 +35,7 @@ jobs:
         DOCKER_USERNAME: secrethub://mattdonatelli/kazubot/docker/username
         DOCKER_PASSWORD: secrethub://mattdonatelli/kazubot/docker/password
         SECRETHUB_TOKEN_PATH: mattdonatelli/kazubot/lab/token
-    - name: Run Docker and Functional Tests
+    - name: Run Docker and Tests
       run: docker run -e SCRIPT="test" -e SECRETHUB_CREDENTIAL=${{ secrets.SECRETHUB_CREDENTIAL }} -e SECRETHUB_TOKEN_PATH="mattdonatelli/kazubot/lab/token" -- mattdonatelli/kazubot:${GITHUB_SHA:0:7}
     - name: Publish Docker image
       run: |
