--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Run eslint
       run: npm run lint
     - name: Build Docker Image
-      run: docker build -t mattdonatelli/kazubot:${GITHUB_SHA:0:7} -t mattdonatelli/kazubot:$latest .
+      run: docker build -t mattdonatelli/kazubot:${GITHUB_SHA:0:7} -t mattdonatelli/kazubot:latest .
     - uses: secrethub/actions/env-export@v0.1.0
       env:
         SECRETHUB_CREDENTIAL: ${{ secrets.SECRETHUB_CREDENTIAL }}
